--- a/apps/shell/src/app/app.html
+++ b/apps/shell/src/app/app.html
@@ -1,1 +1,5 @@
+<!-- Global Toast Notifications - Available to all micro-frontends -->
+<lib-toast-notification position="bottom-right" />
+
+<!-- Application Router Outlet -->
 <router-outlet></router-outlet>
